--- a/dashboard.html
+++ b/dashboard.html
@@ -1046,7 +1046,7 @@
                 // 🟢 Generate Referral Link
                 const referralLinkInput = document.getElementById("referralLink");
                 const referralCode = data.referralCode || user.uid.substring(0, 8); 
-                const BASE_REGISTER_URL = 'https://ripple-com.github.io/xrp-mine-pro.github.io/register.html'; 
+                const BASE_REGISTER_URL = 'https://xrp-mine-pro.pages.dev/register.html'; 
                 referralLinkInput.value = `${BASE_REGISTER_URL}?ref=${referralCode}`; 
  
                 
